--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
+          python  -m pip install -r requirements.txt
       - name: Test with PyTest
         run: |
           python3 -m pytest --cov
